--- a/styles.css
+++ b/styles.css
@@ -321,7 +321,8 @@ body {
 /* Scrollbars only when width >768px */
 @media (min-width: 769px) {
   .map-wrap {
-    overflow: auto; /* allow both x and y scrollbars if content overflows */
+    overflow-x: auto; /* allow both x and y scrollbars if content overflows */
+    overflow-y: auto;
   }
 }
 
