--- a/styles.css
+++ b/styles.css
@@ -333,8 +333,8 @@ body {
     min-height: 1200px; */
     cursor: default; /* no grab cursor – user scrolls */
     cursor: -moz-grabbing;
-    max-width: fit-content;
-    max-height: fit-content; /* allow SVG to extend */  
+    min-width: fit-content;
+    min-height: fit-content; /* allow SVG to extend */  
   }
 }
 
@@ -343,8 +343,8 @@ body {
   #map {
     /* min-width: 1200px;
     min-height: 800px; */
-    max-width: fit-content;
-    max-height: fit-content;
+    min-width: fit-content;
+    min-height: fit-content;
   }
 }
 
