--- a/styles.css
+++ b/styles.css
@@ -134,10 +134,13 @@ body {
 }
 
 #map {
+  /* min-width: 9500px;
+  min-height: 950px; */
   width: 100%;
   height: 100%;
   display: block;
   cursor: grab;
+  /* overflow: scroll; */
 }
 .map-wrap.panning #map {
   cursor: grabbing;
